@startuml

title __DAO's Class Diagram__\n

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace db.dao {
        class com.zaozhuang.newborn.db.dao.BabyDao {
            {static} - TAG : String
            - babyDao : Dao<Baby, Integer>
            - context : Context
            {static} - instance : BabyDao
            + add()
            + delete()
            + getBabyByName()
            + getBabyList()
            + getFistOne()
            {static} + getInstance()
            + getLastOne()
            + getUser()
            + getUser()
            + getUserByOderId()
            + update()
            - BabyDao()
        }
      }
    }
  }
  

  namespace  {
    namespace om.zaozhuang.newborn {
      namespace db.dao {
        class com.zaozhuang.newborn.db.dao.UserDao {
            {static} - TAG : String
            - context : Context
            {static} - instance : UserDao
            - userDao : Dao<User, Integer>
            + add()
            + getFistOne()
            {static} + getInstance()
            + getLastOne()
            + getUser()
            + getUser()
            + getUserByOderId()
            + getUserList()
            + update()
            - UserDao()
        }
      }
    }
  }
  

  com.zaozhuang.newborn.db.dao.BabyDao o-- com.zaozhuang.newborn.db.helper.DBHelper : helper
  com.zaozhuang.newborn.db.dao.UserDao o-- com.zaozhuang.newborn.db.helper.DBHelper : helper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
